# seraph

./: Cargo.toml
src/: lib.rs  main.rs
src/core/math/: color.rs  int_point.rs  int_rect.rs  mod.rs
src/platform/: mod.rs
src/platform/generic/: application.rs  application_message_handler.rs  cursor.rs  iinputinterface.rs  mod.rs  window.rs  window_definition.rs
src/platform/windows/: application.rs  cursor.rs  dialog.rs  macros.rs  mod.rs  utils.rs  window.rs  xinputinterface.rs
