[package]
name = "windowmaker"
version = "0.1.0"
authors = ["iancormac84 <wilnathan@gmail.com>"]

[dependencies.cgmath]
path = "E:/Devel/resources/cgmath"

[dependencies]
advapi32-sys = "*"
bitflags = "*"
dwmapi-sys = "*"
gdi32-sys = "*"
lazy_static = "*"
ole32-sys = "*"
setupapi-sys = "*"
user32-sys = "*"
winapi = "*"
winreg = "*"

[replace]
"winapi:0.2.8" = { path = "E:/Devel/resources/winapi-rs" }
"winapi-build:0.1.1" = { path = "E:/Devel/resources/winapi-rs/build" }
"winreg:0.3.5" = { path = "E:/Devel/resources/winreg-rs" }