[package]
name = "seraph"
version = "0.1.0"
authors = ["iancormac84 <wilnathan@gmail.com>"]
edition = "2021"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs.git"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Display",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_Controls_RichEdit",
    "Win32_UI_Input",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies]
bitflags = "*"
cgmath = "*"
once_cell = "*"
parking_lot = "*"
winreg = "*"
